# mimetic

./: CMakeLists.txt
examples/: b64.cxx  buildidx.cxx  catpart.cxx  engine.cxx  exbin.cxx  mbox.cxx  mm.cxx  search.cxx  smime2xml.cxx  smimestruct.cxx  structure.cxx
mimetic/: config_win32.h  contentid.cxx  mimeentity.cxx  mimeentity.h  tokenizer.h  utils.cxx
mimetic/parser/: itparser.h
mimetic/rfc822/: header.h  messageid.cxx
test/: cutee.cxx  runtest.cxx
